Grafana_with_LDAP/manifests/01-openldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openldap
  namespace: identity
  labels:
    app: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openldap
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
      - name: openldap
        image: osixia/openldap:1.5.0
        imagePullPolicy: IfNotPresent
        args: ["--copy-service"]
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        ports:
        - containerPort: 389
          name: ldap
        volumeMounts:
        - name: seed-ldif-volume
          mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom/seed.ldif
          subPath: seed.ldif
      volumes:
      - name: seed-ldif-volume
        configMap:
          name: openldap-seed-ldif
---
apiVersion: v1
kind: Service
metadata:
  name: openldap
  namespace: identity
  labels:
    app: openldap
spec:
  type: ClusterIP
  ports:
  - port: 389
    targetPort: 389
    name: ldap
  selector:
    app: openldap
